src/OSParsers/parseosrl.output
Grammar

    0 $accept: osrldoc $end

    1 @1: /* empty */

    2 osrldoc: osrlstart resultHeader resultData @1 OSRLEND

    3 osrlstart: OSRLSTART GREATERTHAN
    4          | OSRLSTART OSRLATTRIBUTETEXT GREATERTHAN

    5 resultHeader: RESULTHEADERSTART generalStatus serviceURI serviceName instanceName jobID headerMessage RESULTHEADEREND

    6 generalStatus: GENERALSTATUSSTART anotherGeneralStatusATT GREATERTHAN GENERALSTATUSEND
    7              | GENERALSTATUSSTART anotherGeneralStatusATT ENDOFELEMENT

    8 anotherGeneralStatusATT: generalstatusatt
    9                        | anotherGeneralStatusATT generalstatusatt

   10 generalstatusatt: TYPEATT ATTRIBUTETEXT quote
   11                 | DESCRIPTIONATT ATTRIBUTETEXT quote

   12 serviceURI: /* empty */
   13           | SERVICEURISTARTANDEND
   14           | SERVICEURISTART ELEMENTTEXT SERVICEURIEND
   15           | SERVICEURISTART SERVICEURIEND

   16 serviceName: /* empty */
   17            | SERVICENAMESTARTANDEND
   18            | SERVICENAMESTART ELEMENTTEXT SERVICENAMEEND
   19            | SERVICENAMESTART SERVICENAMEEND

   20 instanceName: /* empty */
   21             | INSTANCENAMESTARTANDEND
   22             | INSTANCENAMESTART ELEMENTTEXT INSTANCENAMEEND
   23             | INSTANCENAMESTART INSTANCENAMEEND

   24 jobID: /* empty */
   25      | JOBIDSTARTANDEND
   26      | JOBIDSTART ELEMENTTEXT JOBIDEND
   27      | JOBIDSTART JOBIDEND

   28 headerMessage: /* empty */
   29              | MESSAGESTARTANDEND
   30              | MESSAGESTART ELEMENTTEXT MESSAGEEND
   31              | MESSAGESTART MESSAGEEND

   32 resultData: RESULTDATASTARTANDEND
   33           | RESULTDATASTART statistics optimization otherResultData RESULTDATAEND
   34           | RESULTDATASTART RESULTDATAEND

   35 otherResultData: /* empty */
   36                | DUMMY

   37 statistics: /* empty */
   38           | DUMMY

   39 @2: /* empty */

   40 optimization: OPTIMIZATIONSTART anotherOptATT @2 optend

   41 optend: ENDOFELEMENT
   42       | GREATERTHAN solution

   43 anotherOptATT: /* empty */
   44              | anotherOptATT optatt

   45 optatt: optnumsolatt quote
   46       | optnumvaratt quote
   47       | optnumconatt quote
   48       | optnumobjatt quote

   49 optnumsolatt: NUMBEROFSOLUTIONSATT INTEGER

   50 optnumvaratt: NUMBEROFVARIABLESATT INTEGER

   51 optnumconatt: NUMBEROFCONSTRAINTSATT INTEGER

   52 optnumobjatt: NUMBEROFOBJECTIVESATT INTEGER

   53 solution: OPTIMIZATIONEND
   54         | anothersolution OPTIMIZATIONEND
   55         | solution anothersolution OPTIMIZATIONEND

   56 anothersolution: SOLUTIONSTART objectiveIDXATT GREATERTHAN status message variables objectives constraints otherSolution

   57 objectiveIDXATT: /* empty */
   58                | OBJECTIVEIDXATT INTEGER quote

   59 status: STATUSSTART anotherStatusATT GREATERTHAN STATUSEND
   60       | STATUSSTART anotherStatusATT ENDOFELEMENT

   61 anotherStatusATT: statusatt
   62                 | anotherStatusATT statusatt

   63 statusatt: TYPEATT ATTRIBUTETEXT quote
   64          | DESCRIPTIONATT ATTRIBUTETEXT quote

   65 message: /* empty */
   66        | MESSAGESTART ELEMENTTEXT MESSAGEEND
   67        | MESSAGESTART MESSAGEEND

   68 variables: /* empty */
   69          | VARIABLESSTART GREATERTHAN VALUESSTART GREATERTHAN var VALUESEND otherVariables VARIABLESEND

   70 var: anothervar
   71    | var anothervar

   72 anothervar: VARSTART anIDXATT GREATERTHAN DOUBLE VAREND
   73           | VARSTART anIDXATT GREATERTHAN INTEGER VAREND

   74 otherVariables: /* empty */
   75               | otherVariables otherVariableResult

   76 @3: /* empty */

   77 @4: /* empty */

   78 otherVariableResult: OTHERSTART @3 anotherotherVarATT GREATERTHAN @4 othervar OTHEREND

   79 othervar: anotherothervar
   80         | othervar anotherothervar

   81 anotherothervar: VARSTART anIDXATT GREATERTHAN ELEMENTTEXT VAREND
   82                | VARSTART anIDXATT GREATERTHAN DOUBLE VAREND
   83                | VARSTART anIDXATT GREATERTHAN INTEGER VAREND

   84 anotherotherVarATT: otheratt
   85                   | anotherotherVarATT otheratt

   86 otheratt: NAMEATT ATTRIBUTETEXT quote
   87         | DESCRIPTIONATT ATTRIBUTETEXT quote

   88 objectives: /* empty */
   89           | OBJECTIVESSTART GREATERTHAN VALUESSTART GREATERTHAN obj VALUESEND otherObjectives OBJECTIVESEND

   90 obj: anotherobj
   91    | obj anotherobj

   92 anotherobj: OBJSTART anIDXATT GREATERTHAN DOUBLE OBJEND
   93           | OBJSTART anIDXATT GREATERTHAN INTEGER OBJEND

   94 constraints: /* empty */
   95            | CONSTRAINTSSTART GREATERTHAN DUALVALUESSTART GREATERTHAN con DUALVALUESEND otherConstraints CONSTRAINTSEND

   96 con: anothercon
   97    | con anothercon

   98 anothercon: CONSTART anIDXATT GREATERTHAN DOUBLE CONEND
   99           | CONSTART anIDXATT GREATERTHAN INTEGER CONEND

  100 anIDXATT: IDXATT INTEGER quote

  101 otherObjectives: /* empty */
  102                | DUMMY

  103 otherConstraints: /* empty */
  104                 | DUMMY

  105 otherSolution: SOLUTIONEND
  106              | DUMMY SOLUTIONEND

  107 quote: xmlWhiteSpace QUOTE

  108 xmlWhiteSpaceChar: ' '
  109                  | '\t'
  110                  | '\r'
  111                  | '\n'

  112 xmlWhiteSpace: /* empty */
  113              | xmlWhiteSpace xmlWhiteSpaceChar


Terminals, with rules where they appear

$end (0) 0
'\t' (9) 109
'\n' (10) 111
'\r' (13) 110
' ' (32) 108
error (256)
ATTRIBUTETEXT (258) 10 11 63 64 86 87
ELEMENTTEXT (259) 14 18 22 26 30 66 81
INTEGER (260) 49 50 51 52 58 73 83 93 99 100
DOUBLE (261) 72 82 92 98
QUOTE (262) 107
GREATERTHAN (263) 3 4 6 42 56 59 69 72 73 78 81 82 83 89 92 93 95 98
    99
ENDOFELEMENT (264) 7 41 60
OSRLSTART (265) 3 4
OSRLATTRIBUTETEXT (266) 4
OSRLEND (267) 2
RESULTHEADERSTART (268) 5
RESULTHEADEREND (269) 5
SERVICEURISTARTANDEND (270) 13
SERVICEURISTART (271) 14 15
SERVICEURIEND (272) 14 15
SERVICENAMESTARTANDEND (273) 17
SERVICENAMESTART (274) 18 19
SERVICENAMEEND (275) 18 19
INSTANCENAMESTARTANDEND (276) 21
INSTANCENAMESTART (277) 22 23
INSTANCENAMEEND (278) 22 23
JOBIDSTARTANDEND (279) 25
JOBIDSTART (280) 26 27
JOBIDEND (281) 26 27
RESULTDATASTART (282) 33 34
RESULTDATAEND (283) 33 34
RESULTDATASTARTANDEND (284) 32
OPTIMIZATIONSTART (285) 40
OPTIMIZATIONEND (286) 53 54 55
SOLUTIONSTART (287) 56
SOLUTIONEND (288) 105 106
VALUESSTART (289) 69 89
VALUESEND (290) 69 89
DUALVALUESSTART (291) 95
DUALVALUESEND (292) 95
VARIABLESSTART (293) 69
VARIABLESEND (294) 69
VARSTART (295) 72 73 81 82 83
VAREND (296) 72 73 81 82 83
OBJECTIVESSTART (297) 89
OBJECTIVESEND (298) 89
OBJSTART (299) 92 93
OBJEND (300) 92 93
CONSTRAINTSSTART (301) 95
CONSTRAINTSEND (302) 95
CONSTART (303) 98 99
CONEND (304) 98 99
STATUSSTART (305) 59 60
STATUSEND (306) 59
GENERALSTATUSSTART (307) 6 7
GENERALSTATUSEND (308) 6
MESSAGESTART (309) 30 31 66 67
MESSAGEEND (310) 30 31 66 67
MESSAGESTARTANDEND (311) 29
OTHERSTART (312) 78
OTHEREND (313) 78
NUMBEROFSOLUTIONSATT (314) 49
NUMBEROFVARIABLESATT (315) 50
NUMBEROFCONSTRAINTSATT (316) 51
NUMBEROFOBJECTIVESATT (317) 52
OBJECTIVEIDXATT (318) 58
IDXATT (319) 100
TYPEATT (320) 10 63
DESCRIPTIONATT (321) 11 64 87
NAMEATT (322) 86
DUMMY (323) 36 38 102 104 106


Nonterminals, with rules where they appear

$accept (73)
    on left: 0
osrldoc (74)
    on left: 2, on right: 0
@1 (75)
    on left: 1, on right: 2
osrlstart (76)
    on left: 3 4, on right: 2
resultHeader (77)
    on left: 5, on right: 2
generalStatus (78)
    on left: 6 7, on right: 5
anotherGeneralStatusATT (79)
    on left: 8 9, on right: 6 7 9
generalstatusatt (80)
    on left: 10 11, on right: 8 9
serviceURI (81)
    on left: 12 13 14 15, on right: 5
serviceName (82)
    on left: 16 17 18 19, on right: 5
instanceName (83)
    on left: 20 21 22 23, on right: 5
jobID (84)
    on left: 24 25 26 27, on right: 5
headerMessage (85)
    on left: 28 29 30 31, on right: 5
resultData (86)
    on left: 32 33 34, on right: 2
otherResultData (87)
    on left: 35 36, on right: 33
statistics (88)
    on left: 37 38, on right: 33
optimization (89)
    on left: 40, on right: 33
@2 (90)
    on left: 39, on right: 40
optend (91)
    on left: 41 42, on right: 40
anotherOptATT (92)
    on left: 43 44, on right: 40 44
optatt (93)
    on left: 45 46 47 48, on right: 44
optnumsolatt (94)
    on left: 49, on right: 45
optnumvaratt (95)
    on left: 50, on right: 46
optnumconatt (96)
    on left: 51, on right: 47
optnumobjatt (97)
    on left: 52, on right: 48
solution (98)
    on left: 53 54 55, on right: 42 55
anothersolution (99)
    on left: 56, on right: 54 55
objectiveIDXATT (100)
    on left: 57 58, on right: 56
status (101)
    on left: 59 60, on right: 56
anotherStatusATT (102)
    on left: 61 62, on right: 59 60 62
statusatt (103)
    on left: 63 64, on right: 61 62
message (104)
    on left: 65 66 67, on right: 56
variables (105)
    on left: 68 69, on right: 56
var (106)
    on left: 70 71, on right: 69 71
anothervar (107)
    on left: 72 73, on right: 70 71
otherVariables (108)
    on left: 74 75, on right: 69 75
otherVariableResult (109)
    on left: 78, on right: 75
@3 (110)
    on left: 76, on right: 78
@4 (111)
    on left: 77, on right: 78
othervar (112)
    on left: 79 80, on right: 78 80
anotherothervar (113)
    on left: 81 82 83, on right: 79 80
anotherotherVarATT (114)
    on left: 84 85, on right: 78 85
otheratt (115)
    on left: 86 87, on right: 84 85
objectives (116)
    on left: 88 89, on right: 56
obj (117)
    on left: 90 91, on right: 89 91
anotherobj (118)
    on left: 92 93, on right: 90 91
constraints (119)
    on left: 94 95, on right: 56
con (120)
    on left: 96 97, on right: 95 97
anothercon (121)
    on left: 98 99, on right: 96 97
anIDXATT (122)
    on left: 100, on right: 72 73 81 82 83 92 93 98 99
otherObjectives (123)
    on left: 101 102, on right: 89
otherConstraints (124)
    on left: 103 104, on right: 95
otherSolution (125)
    on left: 105 106, on right: 56
quote (126)
    on left: 107, on right: 10 11 45 46 47 48 58 63 64 86 87 100
xmlWhiteSpaceChar (127)
    on left: 108 109 110 111, on right: 113
xmlWhiteSpace (128)
    on left: 112 113, on right: 107 113


state 0

    0 $accept: . osrldoc $end

    OSRLSTART  shift, and go to state 1

    osrldoc    go to state 2
    osrlstart  go to state 3


state 1

    3 osrlstart: OSRLSTART . GREATERTHAN
    4          | OSRLSTART . OSRLATTRIBUTETEXT GREATERTHAN

    GREATERTHAN        shift, and go to state 4
    OSRLATTRIBUTETEXT  shift, and go to state 5


state 2

    0 $accept: osrldoc . $end

    $end  shift, and go to state 6


state 3

    2 osrldoc: osrlstart . resultHeader resultData @1 OSRLEND

    RESULTHEADERSTART  shift, and go to state 7

    resultHeader  go to state 8


state 4

    3 osrlstart: OSRLSTART GREATERTHAN .

    $default  reduce using rule 3 (osrlstart)


state 5

    4 osrlstart: OSRLSTART OSRLATTRIBUTETEXT . GREATERTHAN

    GREATERTHAN  shift, and go to state 9


state 6

    0 $accept: osrldoc $end .

    $default  accept


state 7

    5 resultHeader: RESULTHEADERSTART . generalStatus serviceURI serviceName instanceName jobID headerMessage RESULTHEADEREND

    GENERALSTATUSSTART  shift, and go to state 10

    generalStatus  go to state 11


state 8

    2 osrldoc: osrlstart resultHeader . resultData @1 OSRLEND

    RESULTDATASTART        shift, and go to state 12
    RESULTDATASTARTANDEND  shift, and go to state 13

    resultData  go to state 14


state 9

    4 osrlstart: OSRLSTART OSRLATTRIBUTETEXT GREATERTHAN .

    $default  reduce using rule 4 (osrlstart)


state 10

    6 generalStatus: GENERALSTATUSSTART . anotherGeneralStatusATT GREATERTHAN GENERALSTATUSEND
    7              | GENERALSTATUSSTART . anotherGeneralStatusATT ENDOFELEMENT

    TYPEATT         shift, and go to state 15
    DESCRIPTIONATT  shift, and go to state 16

    anotherGeneralStatusATT  go to state 17
    generalstatusatt         go to state 18


state 11

    5 resultHeader: RESULTHEADERSTART generalStatus . serviceURI serviceName instanceName jobID headerMessage RESULTHEADEREND

    SERVICEURISTARTANDEND  shift, and go to state 19
    SERVICEURISTART        shift, and go to state 20

    $default  reduce using rule 12 (serviceURI)

    serviceURI  go to state 21


state 12

   33 resultData: RESULTDATASTART . statistics optimization otherResultData RESULTDATAEND
   34           | RESULTDATASTART . RESULTDATAEND

    RESULTDATAEND  shift, and go to state 22
    DUMMY          shift, and go to state 23

    $default  reduce using rule 37 (statistics)

    statistics  go to state 24


state 13

   32 resultData: RESULTDATASTARTANDEND .

    $default  reduce using rule 32 (resultData)


state 14

    2 osrldoc: osrlstart resultHeader resultData . @1 OSRLEND

    $default  reduce using rule 1 (@1)

    @1  go to state 25


state 15

   10 generalstatusatt: TYPEATT . ATTRIBUTETEXT quote

    ATTRIBUTETEXT  shift, and go to state 26


state 16

   11 generalstatusatt: DESCRIPTIONATT . ATTRIBUTETEXT quote

    ATTRIBUTETEXT  shift, and go to state 27


state 17

    6 generalStatus: GENERALSTATUSSTART anotherGeneralStatusATT . GREATERTHAN GENERALSTATUSEND
    7              | GENERALSTATUSSTART anotherGeneralStatusATT . ENDOFELEMENT
    9 anotherGeneralStatusATT: anotherGeneralStatusATT . generalstatusatt
